ghc-4335c07/testsuite/tests/rename/should_fail/rnfail012.hs

class A a where
 op1 :: a

class B a where
 op2 :: b -> b

class A a where
 op3 :: a
